add_iss_alerts: Adjust MSSQL alerts

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -219,7 +219,7 @@ component: IIS
 ### MSSQL
 # Source: https://www.aimbetter.com/cache-hit-ratio/
  template: wmi_mssql_hit_ratio
-       on: wmi.mssql_instance_cache_hit_ratio
+       on: mssql.instance_cache_hit_ratio
     class: Workload
      type: Windows
 component: MSSQL
@@ -234,83 +234,53 @@ component: MSSQL
      info: Average cache hit ratio in db $label:mssql_instance over the last minute
        to: sysadmin
 
+ template: wmi_mssql_error_offline
+       on: mssql.instance_sql_errors
+    class: Error
+     type: Windows
+component: MSSQL
+       os: *
+    hosts: *
+     calc: $db_offline != 0 ? 1: 0
+    units: errors
+    every: 10s
+     crit: $this != 0
+     info: Instance $label:mssql_instance is offline
+       to: silent
+
+# Next alerts should be adjusted according user internal configuration
+
+# https://learn.microsoft.com/en-us/sql/database-engine/configure-windows/blocked-process-threshold-server-configuration-option?view=sql-server-ver16
  template: wmi_mssql_blocked_processes
-       on: wmi.mssql_instance_blocked_processes
+       on: mssql.instance_blocked_processes
     class: Workload
      type: Windows
 component: MSSQL
        os: *
     hosts: *
-   lookup: average -30s unaligned of blocked
+   lookup: average -1m of blocked
     units: %
     every: 10s
-     warn: $this > (($status >= $WARNING)  ? (25) : (30))
-     crit: $this > (($status == $CRITICAL) ? (40) : (50))
+     warn: $this > (($status >= $WARNING)  ? (5) : (10))
+     crit: $this > (($status == $CRITICAL) ? (10) : (20))
     delay: down 5m multiplier 2.0 max 1h
      info: A high number of process has been blocked in past 30s for $label:mssql_instance
-       to: sysadmin
+       to: silent
 
- template: wmi_mssql_error_offline
-       on: wmi.mssql_instance_sql_errors_total
-    class: Error
-     type: Windows
-component: MSSQL
-       os: *
-    hosts: *
-   lookup: average -30s unaligned of offline
-    units: errors
-    every: 10s
-     crit: $netdata.uptime.uptime > (60) AND $this != 0
-    delay: down 1m multiplier 2.0 max 30m
-     info: Instance $label:mssql_instance is offline
-       to: sysadmin
-
- template: wmi_mssql_error_kill_connection
-       on: wmi.mssql_instance_sql_errors_total
-    class: Error
-     type: Windows
-component: MSSQL
-       os: *
-    hosts: *
-   lookup: sum -1m unaligned of Kill*
-    units: errors
-    every: 10s
-     warn: $this > (($status >= $WARNING)  ? (15) : (10))
-     crit: $this > (($status == $CRITICAL) ? (30) : (20))
-    delay: down 1m multiplier 2.0 max 30m
-     info: High number of killed connection for $label:mssql_instance.
-       to: sysadmin
-
- template: wmi_mssql_lock_wait
-       on: wmi.mssql_instance_locks_lock_wait
-    class: Utilization
-     type: Windows
-component: MSSQL
-       os: *
-    hosts: *
-   lookup: average -1m unaligned foreach *
-    units: miliseconds
-    every: 30s
-     warn: $this > (($status >= $WARNING)  ? (1000) : (2000))
-     crit: $this > (($status == $CRITICAL) ? (5000) : (2000))
-    delay: down 10m multiplier 1.5 max 1h
-     info: A long wait to lock for $label:mssql_instance.
-       to: sysadmin
-
+# https://learn.microsoft.com/en-us/sql/database-engine/configure-windows/configure-the-user-connections-server-configuration-option?view=sql-server-ver16
  template: wmi_mssql_user_connection
-       on: wmi.mssql_instance_user_connection
+       on: mssql.instance_user_connection
     class: Utilization
      type: Windows
 component: MSSQL
        os: *
     hosts: *
-   lookup: sum -10s of active
+   lookup: average -1m of user
     units: connections
     every: 10s
-     warn: $this > (($status >= $WARNING)  ? (375) : (325))
-     crit: $this > (($status == $CRITICAL) ? (425) : (375))
+     warn: $this > (($status >= $WARNING)  ? (22936) : (26213))
+     crit: $this > (($status == $CRITICAL) ? (26213) : (29490))
     delay: up 20s down 20m multiplier 1.2 max 2h
-     info: You are having a higher number of active connections for $label:mssql_instance, \
-           depending of hardware and configuration you can reach TCP congestion.
-       to: sysadmin
+     info: High number of connections for $label:mssql_instance.
+       to: silent
 
