add_iss_alerts: Add ADCS/ADFS alerts

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -284,3 +284,61 @@ component: MSSQL
      info: High number of connections for $label:mssql_instance.
        to: silent
 
+### ADCS
+ template: wmi_adcs_failed_request
+       on: adcs.cert_template_failed_requests
+    class: Error
+     type: Windows
+component: ADCS
+       os: *
+    hosts: *
+     calc: $failed != 0 ? 1 :0
+    units: failed
+    every: 10s
+     warn: $this != 0
+     info: Certificate(s) was/were denied in $label:cert_template.
+       to: sysadmin
+
+### ADFS
+ template: wmi_adfs_connection_failure
+       on: adfs.ad_login_connection_failures
+    class: Error
+     type: Windows
+component: ADCS
+       os: *
+    hosts: *
+     calc: $connection != 0 ? 1 :0
+    units: failed
+    every: 10s
+     warn: $this != 0
+     info: ADFS is reporting error on connection(s).
+       to: sysadmin
+
+ template: wmi_adfs_artifact_failure
+       on: adfs.db_artifact_failures
+    class: Error
+     type: Windows
+component: ADCS
+       os: *
+    hosts: *
+     calc: $connection != 0 ? 1 :0
+    units: failed
+    every: 10s
+     warn: $this != 0
+     info: ADFS is reporting error to connect to artifacts.
+       to: sysadmin
+
+ template: wmi_adfs_dbconfig_failure
+       on: adfs.db_config_failures
+    class: Error
+     type: Windows
+component: ADCS
+       os: *
+    hosts: *
+     calc: $connection != 0 ? 1 :0
+    units: failed
+    every: 10s
+     warn: $this != 0
+     info: ADFS is reporting error to connect to DB config.
+       to: sysadmin
+
