--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -114,6 +114,8 @@ RUN chown -R root:root \
 ENV NETDATA_LISTENER_PORT 19999
 EXPOSE $NETDATA_LISTENER_PORT
 
+ENV NETDATA_EXTRA_APK_PACKAGES="apcupsd libvirt-daemon lm-sensors msmtp netcat-openbsd"
+
 ENTRYPOINT ["/usr/sbin/run.sh"]
 
 HEALTHCHECK --interval=60s --timeout=10s --retries=3 CMD /usr/sbin/health.sh
