Add kernel logs charts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1066,6 +1066,8 @@ set(LOGSMANAGEMENT_FILES
         collectors/logsmanagement.plugin/plugin_logsmanagement_docker_ev.h
         collectors/logsmanagement.plugin/plugin_logsmanagement_generic.c
         collectors/logsmanagement.plugin/plugin_logsmanagement_generic.h
+        collectors/logsmanagement.plugin/plugin_logsmanagement_kernel.c
+        collectors/logsmanagement.plugin/plugin_logsmanagement_kernel.h
         collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.c
         collectors/logsmanagement.plugin/plugin_logsmanagement_systemd.h
         collectors/logsmanagement.plugin/plugin_logsmanagement_web_log.c
