--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -11,7 +11,7 @@
 	disk space limit = 500 # in MiB, default 500MiB
 
 	# Charts to enable
-	priority value chart = yes
+	severity chart = yes
 
 [Systemd Logs]
 	# Example: Log collector that will query journald to collect system logs
