add_iss_alerts: Add an alert to help developers to understand software behavior

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -342,3 +342,21 @@ component: ADCS
      info: ADFS is reporting error to connect to DB config.
        to: sysadmin
 
+### Netframework
+
+# Number of Exceptions raised are pretty high for some software, 
+# so we are setting it to silent
+
+ template: wmi_netframework_exception_thrown
+       on: netframework.clrexception_thrown
+    class: Error
+     type: Windows
+component: NETFramework
+       os: *
+    hosts: *
+     calc: $exceptions != 0 ? 1 :0
+    units: exceptions
+    every: 10s
+     warn: $this != 0
+     info: The application $label:process raised an exception
+       to: silent
