add_iss_alerts: Add an alert to monitor active directory hit ratio and performance

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -360,3 +360,22 @@ component: NETFramework
      warn: $this != 0
      info: The application $label:process raised an exception
        to: silent
+
+### AD
+# Value was taken from a demo environment, in a real environment the values
+# are much higher, this is the motive this is et as silent
+ template: wmi_netframework_ad_cache_hit
+       on: ad.name_cache_hits
+    class: Cache
+     type: Windows
+component: AD
+       os: *
+    hosts: *
+   lookup: average -1m of names
+    units: names
+    every: 10s
+     warn: $this < 50
+     crit: $this < 10
+     info: A lack of activity can indicate that the server has insufficient physical memory.
+       to: silent
+
