--- a/system/Makefile.am
+++ b/system/Makefile.am
@@ -5,14 +5,14 @@ MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
 CLEANFILES = \
     netdata-openrc \
     netdata.logrotate \
-    netdata.service \
-    netdata.service.v235 \
     netdata-init-d \
     netdata-lsb \
     netdata-freebsd \
     netdata.plist \
     netdata.crontab \
-    netdata-updater.service \
+    systemd/netdata.service \
+    systemd/netdata.service.v235 \
+    systemd/netdata-updater.service \
     $(NULL)
 
 include $(top_srcdir)/build/subst.inc
@@ -26,10 +26,13 @@ dist_config_DATA = \
     .install-type \
     $(NULL)
 
+libsyssystemddir=$(libsysdir)/systemd
+
 # Explicitly install directories to avoid permission issues due to umask
 install-exec-local:
 	$(INSTALL) -d $(DESTDIR)$(configdir)
 	$(INSTALL) -d $(DESTDIR)$(libsysdir)
+	$(INSTALL) -d $(DESTDIR)$(libsyssystemddir)
 
 libexecnetdatadir=$(libexecdir)/netdata
 nodist_libexecnetdata_SCRIPTS = \
@@ -39,31 +42,34 @@ nodist_libexecnetdata_SCRIPTS = \
 nodist_libsys_DATA = \
     netdata-openrc \
     netdata.logrotate \
-    netdata.service \
-    netdata.service.v235 \
     netdata-init-d \
     netdata-lsb \
     netdata-freebsd \
     netdata.plist \
     netdata.crontab \
-    netdata-updater.service \
     $(NULL)
 
-dist_libsys_DATA = \
-    netdata-updater.timer \
+nodist_libsyssystemd_DATA = \
+    systemd/netdata.service \
+    systemd/netdata.service.v235 \
+    systemd/netdata-updater.service \
+    $(NULL)
+
+dist_libsyssystemd_DATA = \
+    systemd/netdata-updater.timer \
     $(NULL)
 
 dist_noinst_DATA = \
     install-service.sh.in \
     netdata-openrc.in \
     netdata.logrotate.in \
-    netdata.service.in \
-    netdata.service.v235.in \
     netdata-init-d.in \
     netdata-lsb.in \
     netdata-freebsd.in \
     netdata.plist.in \
     netdata.conf \
     netdata.crontab.in \
-    netdata-updater.service.in \
+    systemd/netdata.service.in \
+    systemd/netdata.service.v235.in \
+    systemd/netdata-updater.service.in \
     $(NULL)
