--- a/system/install-service.sh.in
+++ b/system/install-service.sh.in
@@ -236,10 +236,10 @@ get_systemd_service_dir() {
 }
 
 install_systemd_service() {
-  SRCFILE="${SVC_SOURCE}/netdata.service"
+  SRCFILE="${SVC_SOURCE}/systemd/netdata.service"
 
   if [ "$(systemctl --version | head -n 1 | cut -f 2 -d ' ')" -le 235 ]; then
-    SRCFILE="${SVC_SOURCE}/netdata.service.v235"
+    SRCFILE="${SVC_SOURCE}/systemd/netdata.service.v235"
   fi
 
   if [ "${ENABLE}" = "auto" ]; then
