--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -124,7 +124,7 @@ override_dh_fixperms:
 	chmod 4750 $(TOP)-plugin-freeipmi/usr/libexec/netdata/plugins.d/freeipmi.plugin
 
 override_dh_installlogrotate:
-	cp system/netdata.logrotate debian/netdata.logrotate
+	cp system/logrotate/netdata debian/netdata.logrotate
 	dh_installlogrotate
 
 override_dh_clean:
