make sql example multiline

--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -204,6 +204,10 @@ update_every: 5
 #         units: "percent"
 #         df_steps: >
 #           pd.read_sql_query(
-#             sql='select random()*100 as metric_1, random()*100 as metric_2',
+#             sql='\
+#                 select \
+#                     random()*100 as metric_1, \
+#                     random()*100 as metric_2 \
+#                ',
 #             con=create_engine('postgresql://localhost/postgres?user=netdata&password=netdata')
 #             );
