Add kernel logs subsystem and device charts

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -12,6 +12,8 @@
 
 	# Charts to enable
 	severity chart = yes
+	subsystem chart = yes
+	device chart = yes
 
 [Systemd Logs]
 	# Example: Log collector that will query journald to collect system logs
