Add example of custom kmsg charts

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -1,5 +1,5 @@
-[Kernel Logs]
-	# Example: Log collector that will collect new kernel logs
+[kmsg Logs]
+	# Example: Log collector that will collect new kernel ring buffer logs
 
 	enabled = yes
 	update every = 1
@@ -14,6 +14,15 @@
 	severity chart = yes
 	subsystem chart = yes
 	device chart = yes
+
+	# Example of capturing specific kmsg events:
+	custom 1 chart = USB connect/disconnect
+	custom 1 regex name = connect
+	custom 1 regex = .*\bNew USB device found\b.*
+
+	custom 2 chart = USB connect/disconnect
+	custom 2 regex name = disconnect
+	custom 2 regex = .*\bUSB disconnect\b.*
 
 [Systemd Logs]
 	# Example: Log collector that will query journald to collect system logs
