--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -142,7 +142,7 @@ jobs:
           submodules: recursive
           fetch-depth: 0
       - name: Setup Python
-        uses: actions/setup-python@4
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: Run flake8
