--- a/collectors/python.d.plugin/ethtool/ethtool.conf
+++ b/collectors/python.d.plugin/ethtool/ethtool.conf
@@ -64,5 +64,8 @@
 # loop_mode: yes/no                 # default is yes. If set to yes `nvidia-smi` is executed in a separate thread using `-l` option.
 # poll_seconds: SECONDS             # default is 1. Sets the frequency of seconds the nvidia-smi tool is polled in loop mode.
 # exclude_zero_memory_users: yes/no # default is no. Whether to collect users metrics with 0Mb memory allocation.
+ethtool:
+    name: "Ethernet metrics"      # the JOB's name as it will appear on the dashboard
+    dev_filter: "enp66s"          # device filter to gather data only for devices that passes this filter
 #
 # ----------------------------------------------------------------------
