--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -259,6 +259,8 @@ export CFLAGS="${CFLAGS} -fPIC" && ${RPM_BUILD_DIR}/%{name}-%{version}/packaging
 %endif
 %endif
 
+export CFLAGS="${CFLAGS} -fPIC" && ${RPM_BUILD_DIR}/%{name}-%{version}/packaging/bundle-h2o.sh ${RPM_BUILD_DIR}/%{name}-%{version}
+
 %build
 # Conf step
 autoreconf -ivf
