--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -51,7 +51,8 @@ RUN mkdir -p /app/usr/sbin/ \
     mv /usr/sbin/netdatacli    /app/usr/sbin/ && \
     mv packaging/docker/run.sh        /app/usr/sbin/ && \
     mv packaging/docker/health.sh     /app/usr/sbin/ && \
-    cp -rp /deps/* /app/usr/local/ && \
+    cp -rp /deps/etc /app/usr/local/etc && \
+    chmod -R o+rX /app && \
     chmod +x /app/usr/sbin/run.sh
 
 #####################################################################
