Add basic BTRFS error alarms.
Configured to trip whenever any of the error dimensions is non-zero.

--- a/health/health.d/btrfs.conf
+++ b/health/health.d/btrfs.conf
@@ -66,3 +66,78 @@ component: File system
     delay: up 1m down 15m multiplier 1.5 max 1h
      info: utilization of BTRFS system space
        to: sysadmin
+
+ template: btrfs_errors
+       on: btrfs.errors
+    class: Errors
+     type: System
+component: File system
+       os: *
+    hosts: *
+ families: *
+    units: errors
+   lookup: max -10m every 1m foreach *:read_errs
+     warn: $this > 0
+    delay: up 1m down 15m multiplier 1.5 max 1h
+     info: number of encountered BTRFS read errors
+       to: sysadmin
+
+ template: btrfs_errors
+       on: btrfs.errors
+    class: Errors
+     type: System
+component: File system
+       os: *
+    hosts: *
+ families: *
+    units: errors
+   lookup: max -10m every 1m foreach *:write_errs
+     warn: $this > 0
+    delay: up 1m down 15m multiplier 1.5 max 1h
+     info: number of encountered BTRFS write errors
+       to: sysadmin
+
+ template: btrfs_errors
+       on: btrfs.errors
+    class: Errors
+     type: System
+component: File system
+       os: *
+    hosts: *
+ families: *
+    units: errors
+   lookup: max -10m every 1m foreach *:flush_errs
+     warn: $this > 0
+    delay: up 1m down 15m multiplier 1.5 max 1h
+     info: number of encountered BTRFS flush errors
+       to: sysadmin
+
+ template: btrfs_errors
+       on: btrfs.errors
+    class: Errors
+     type: System
+component: File system
+       os: *
+    hosts: *
+ families: *
+    units: errors
+   lookup: max -10m every 1m foreach *:corruption_errs
+     warn: $this > 0
+    delay: up 1m down 15m multiplier 1.5 max 1h
+     info: number of encountered BTRFS corruption errors
+       to: sysadmin
+
+ template: btrfs_errors
+       on: btrfs.errors
+    class: Errors
+     type: System
+component: File system
+       os: *
+    hosts: *
+ families: *
+    units: errors
+   lookup: max -10m every 1m foreach *:generation_errs
+     warn: $this > 0
+    delay: up 1m down 15m multiplier 1.5 max 1h
+     info: number of encountered BTRFS generation errors
+       to: sysadmin
