Update readme file

--- a/collectors/python.d.plugin/ethtool/ethtool.conf
+++ b/collectors/python.d.plugin/ethtool/ethtool.conf
@@ -66,6 +66,6 @@
 # exclude_zero_memory_users: yes/no # default is no. Whether to collect users metrics with 0Mb memory allocation.
 ethtool:
     name: "Ethernet metrics"      # the JOB's name as it will appear on the dashboard
-    dev_filter: "enp66s"          # device filter to gather data only for devices that passes this filter
+#    dev_filter: "enp66s"         # Only network devices containing eno in their name will be measured
 #
 # ----------------------------------------------------------------------
