new_ebpf_option: Modify thread configuration file to simplify user life

--- a/collectors/ebpf.plugin/ebpf.d/dcstat.conf
+++ b/collectors/ebpf.plugin/ebpf.d/dcstat.conf
@@ -34,4 +34,4 @@
     ebpf type format = auto
     ebpf co-re tracing = trampoline
     collect pid = real parent
-    maps per core = yes
+#    maps per core = yes
