--- a/collectors/ebpf.plugin/ebpf.d/process.conf
+++ b/collectors/ebpf.plugin/ebpf.d/process.conf
@@ -25,4 +25,4 @@
 #    update every = 10
 #    pid table size = 32768
     collect pid = real parent
-    maps per core = yes
+#    maps per core = yes
