--- a/collectors/ebpf.plugin/ebpf.d/sync.conf
+++ b/collectors/ebpf.plugin/ebpf.d/sync.conf
@@ -28,7 +28,7 @@
 #    update every = 10
     ebpf type format = auto
     ebpf co-re tracing = trampoline
-    maps per core = yes
+#    maps per core = yes
 
 # List of monitored syscalls 
 [syscalls]
