--- a/collectors/ebpf.plugin/ebpf.d/cachestat.conf
+++ b/collectors/ebpf.plugin/ebpf.d/cachestat.conf
@@ -36,4 +36,4 @@
     ebpf type format = auto
     ebpf co-re tracing = trampoline
     collect pid = real parent
-    maps per core = yes
+#    maps per core = yes
