--- a/collectors/ebpf.plugin/ebpf.d/network.conf
+++ b/collectors/ebpf.plugin/ebpf.d/network.conf
@@ -38,7 +38,7 @@
     udp connection table size = 4096
     ebpf type format = auto
     ebpf co-re tracing = trampoline
-    maps per core = yes
+#    maps per core = yes
 
 #
 # Network Connection
