--- a/health/health.d/ml.conf
+++ b/health/health.d/ml.conf
@@ -9,17 +9,17 @@
 # https://learn.netdata.cloud/docs/agent/ml#node-anomaly-rate
 # if node level anomaly rate is between 1-5% then warning (pick your own threshold that works best via tial and error).
 # if node level anomaly rate is above 5% then critical (pick your own threshold that works best via tial and error).
-# template: ml_1min_node_ar
-#       on: anomaly_detection.anomaly_rate
-#       os: linux
-#    hosts: *
-#   lookup: average -1m foreach anomaly_rate
-#     calc: $this
-#    units: %
-#    every: 30s
-#     warn: $this > (($status >= $WARNING)  ? (1) : (5))
-#     crit: $this > (($status == $CRITICAL) ? (5) : (100))
-#     info: rolling 1min node level anomaly rate
+template: ml_1min_node_ar
+      on: anomaly_detection.anomaly_rate
+      os: linux
+   hosts: *
+  lookup: average -1m foreach anomaly_rate
+    calc: $this
+   units: %
+   every: 30s
+    warn: $this > (($status >= $WARNING)  ? (1) : (5))
+    crit: $this > (($status == $CRITICAL) ? (5) : (100))
+    info: rolling 1min node level anomaly rate
 
 # alert per dimension example
 # if anomaly rate is between 5-20% then warning (pick your own threshold that works best via tial and error).
